k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resilience-platform-service
  namespace: resilience-platform
spec:
  selector:
    app: resilience-pod 
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
